--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
         background-color: var(--secondary-color);
         color: var(--button-orange);
         border: 1px solid var(--button-orange);
-        padding: 3px 8px;  /* 將左右內邊距從 8px 改為 6px */
-        margin: 0 3px;     /* 將左右外邊距改為 2px */
+        padding: 4px 8px;  /* 將左右內邊距從 8px 改為 6px */
+        margin: 0 5px;     /* 將左右外邊距改為 2px */
         border-radius: 4px;
         cursor: pointer;
         transition: all 0.3s ease;
@@ -321,10 +321,10 @@
         <input type="number" id="totalInterest" class="readonly" readonly>
     </div>
     <div class="row">
-        <span class="label">等於幾碗雞肉飯</span>
+        <span class="label">等於火雞肉飯</span>
         <input type="number" id="chickenRice" class="readonly" readonly>
+        <span style="margin-left: 0px; color: var(--text-color);">碗</span>
     </div>
-
     <div class="row">
         <span class="label">稅金</span>
         <input type="number" id="tax" class="readonly" readonly>
