--- a/index.html
+++ b/index.html
@@ -245,6 +245,21 @@
 		color: var(--button-orange);
 		border-color: var(--button-orange);
 	}
+	.footer-message {
+		background-color: #222222;
+		color: var(--text-color);
+		padding: 15px;
+		text-align: center;
+		margin-top: 15px;
+		font-weight: bold;
+		border-radius: 4px;
+	}
+
+	.footer-spacing {
+		background-color: #222222;
+		height: 30px;
+		margin-top: 0px;
+	}
 </style>
 </head>
 <body>
@@ -685,6 +700,8 @@
 }
     </script>
 	<!-- 在 </body> 標籤前添加 -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+	<div class="footer-message">報價後記得吃碗火雞肉飯唷！</div>
+	<div class="footer-spacing"></div>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 </body>
 </html>
