--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
     	color: var(--text-color);
     	font-family: "Microsoft JhengHei", Arial, sans-serif;
     	box-sizing: border-box; /* 添加這行 */
-		animation: fadeIn 0.8s ease-out;
 	}
 
     h1 {
@@ -62,7 +61,6 @@
         border-bottom: 2px solid var(--button-orange);
         padding-bottom: 5px;
 		position: relative;
-        animation: slideIn 0.6s ease-out;
 		transition: all 0.3s ease;
     }
 		h1:hover {
@@ -96,8 +94,6 @@
         padding: 3px;
         border-radius: 4px;
         box-shadow: 0 4px 8px var(--shadow-color);
-		animation: slideIn 0.5s ease-out;
-		animation-fill-mode: both;
         transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
 		.row:hover {
@@ -105,7 +101,7 @@
         box-shadow: 0 6px 12px var(--shadow-color);
     }
 		.row:nth-child(2n) {
-    animation-delay: 0.1s;
+    
 }
 
     .label {
@@ -588,7 +584,7 @@
 	// 添加震動函數
         function vibrate() {
             if (navigator.vibrate) {
-                navigator.vibrate(30); // 震動50毫秒
+                navigator.vibrate(30); // 震動30毫秒
             }
         }
 	     // 添加更新時間的函數
@@ -962,5 +958,11 @@
 	<div class="footer-message">報價後記得吃碗火雞肉飯唷！</div>
 	<div class="footer-spacing"></div>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+	
+	<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        document.body.classList.add('loaded');
+    });
+</script>
 </body>
 </html>
