--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     }
 
     input {
-        width: 85px;
+        width: 95px;
         padding: 5px 12px;
         margin-right: 10px;
         background-color: #222222;
@@ -513,7 +513,7 @@
         <span style="margin-left: 0px; color: var(--text-color);">碗</span>
     </div>
     <div class="row">
-        <span class="label">稅金</span>
+        <span class="label">營業稅</span>
         <input type="number" id="tax" class="readonly" readonly>
     </div>
 
@@ -572,7 +572,6 @@
     <div class="row">
         <span class="label">Spread</span>
         <input type="number" id="spread" class="readonly" readonly>
-		<span style="margin-left: 0px; color: var(--text-color);">(概略值)</span>
     </div>
 	
 	
