--- a/index.html
+++ b/index.html
@@ -541,6 +541,8 @@
         <input type="number" id="afterCommissionRate" class="readonly" readonly>
     </div>
 
+    <div class="divider"></div>
+
     <div class="row">
         <span class="label">百萬每年利息</span>
         <input type="number" id="annualMillionInterest" class="readonly" readonly>
@@ -573,13 +575,14 @@
     </div>
 	
     <div class="row">
-        <span class="label">資金成本</span>
+        <span class="label">NPV</span>
         <input type="number" id="fundingCost" class="readonly" readonly>
-        <span style="margin-left: 0px; color: var(--text-color);">(元)</span>
+        <span style="margin-left: 0px; color: var(--text-color);">錯誤修正中</span>
     </div>
 	
 	<!-- 在最後一個 .row div 後面添加 -->
 	<div class="divider"></div>
+
 	<div class="function-buttons">
     	<button onclick="window.open('https://travel.chiayi.gov.tw/Folder/TurkeyRice', '_blank')">雞肉飯</button>
 		<button onclick="location.reload()">全清</button>
