--- a/index.html
+++ b/index.html
@@ -423,12 +423,77 @@
 		@keyframes glowBorder {
 		0%, 100% { box-shadow: 0 0 5px var(--button-orange); }
 		50% { box-shadow: 0 0 15px var(--button-orange), 0 0 30px rgba(255, 156, 51, 0.3); }
-}
+    }
 		.warning-text {
 		color: #ff0000 !important;
 		font-weight: bold !important;
 		animation: pulse 1s infinite;
 	}
+
+    /* 更新分隔線樣式 */
+    .divider {
+        position: relative;
+        height: 2px;
+        background: linear-gradient(
+            90deg,
+            transparent,
+            var(--button-orange) 20%,
+            var(--button-orange) 80%,
+            transparent
+        );
+        margin: 5px 0;
+        opacity: 0;
+        animation: dividerFadeIn 0.8s ease forwards;
+        overflow: hidden;
+    }
+
+    /* 添加發光效果的偽元素 */
+    .divider::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: -100%;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(
+            90deg,
+            transparent,
+            rgba(255, 156, 51, 0.6),
+            transparent
+        );
+        animation: dividerGlow 3s ease-in-out infinite;
+    }
+
+    /* 分隔線淡入動畫 */
+    @keyframes dividerFadeIn {
+        from {
+            opacity: 0;
+            transform: scaleX(0.8);
+        }
+        to {
+            opacity: 1;
+            transform: scaleX(1);
+        }
+    }
+
+    /* 發光效果動畫 */
+    @keyframes dividerGlow {
+        0% {
+            left: -100%;
+        }
+        50% {
+            left: 100%;
+        }
+        100% {
+            left: 100%;
+        }
+    }
+
+    /* 懸停效果 */
+    .divider:hover::before {
+        animation-duration: 1.5s;
+    }
+
 </style>
 </head>
 <body>
@@ -568,6 +633,8 @@
         <input type="number" id="monthlyCost" value="2.0951" class="readonly" readonly>
         <span style="margin-left: 0px; color: var(--text-color);">%</span>
     </div>
+
+    <div class="divider"></div>
 
     <div class="row">
         <span class="label">Spread</span>
