--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@
     </div>
 
     <div class="row">
-        <span class="label">推廣費比例</span>
+        <span class="label">推廣比例</span>
         <input type="number" id="commissionRatio" class="readonly" readonly>
         <span style="margin-left: 0px; color: var(--text-color);">%</span>
     </div>
