--- a/index.html
+++ b/index.html
@@ -610,6 +610,7 @@
     <div class="row">
         <span class="label">稅佣後利率</span>
         <input type="number" id="afterCommissionRate" class="readonly" readonly>
+	<span style="margin-left: 0px; color: var(--text-color);">%</span>
     </div>
 
     <div class="divider"></div>
@@ -645,6 +646,7 @@
     <div class="row">
         <span class="label">Spread</span>
         <input type="number" id="spread" class="readonly" readonly>
+	<span style="margin-left: 0px; color: var(--text-color);">%</span>
     </div>
 	
     <div class="row">
