--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
     <div class="row">
         <span class="label">NPV</span>
         <input type="number" id="fundingCost" class="readonly" readonly>
-        <span style="margin-left: 0px; color: var(--text-color);">錯誤修正中</span>
+        <span style="margin-left: 0px; color: var(--text-color);">修正中</span>
     </div>
 	
 	<!-- 在最後一個 .row div 後面添加 -->
@@ -660,7 +660,7 @@
 
 	<div class="function-buttons">
     	<button onclick="window.open('https://travel.chiayi.gov.tw/Folder/TurkeyRice', '_blank')">雞肉飯</button>
-		<button onclick="location.reload()">全清</button>
+		<button onclick="location.reload()">清除</button>
     	<button onclick="generateQuote()">截圖</button>
 	</div>
 <script>
