--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
 <head>
+	<!-- Google Analytics 追蹤程式碼 -->
+    	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-XE5XMQR0Z1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+	
+	  gtag('config', 'G-XE5XMQR0Z1');
+	</script>
+	
     <meta charset="UTF-8">
 	<meta name="viewport" content="width=400, user-scalable=no">
     <title>雞肉飯要每天吃</title>
